[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "urllib3>=2.5.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
]
